amended: README, prepare.ipynb

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "7234b793",
    "metadata": {},
    "outputs": [],
@@ -85,76 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "e3147da9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['KR', 'KR', 'KR', ..., 'IND', 'IND', 'IND'], dtype=object)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(test.region == 'IN', 'IND', test.region)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 67,
    "id": "0776fac1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = acquire()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "fdc98016",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 9536 entries, 0 to 159\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   video_id           9536 non-null   object\n",
-      " 1   title              9536 non-null   object\n",
-      " 2   publishedAt        9536 non-null   object\n",
-      " 3   channelTitle       9536 non-null   object\n",
-      " 4   categoryId         9536 non-null   int64 \n",
-      " 5   trending_date      9536 non-null   object\n",
-      " 6   tags               9536 non-null   object\n",
-      " 7   view_count         9536 non-null   int64 \n",
-      " 8   likes              9536 non-null   int64 \n",
-      " 9   comment_count      9536 non-null   int64 \n",
-      " 10  thumbnail_link     9536 non-null   object\n",
-      " 11  comments_disabled  9536 non-null   bool  \n",
-      " 12  ratings_disabled   9536 non-null   bool  \n",
-      " 13  description        9536 non-null   object\n",
-      " 14  duration           9536 non-null   object\n",
-      " 15  captions           9536 non-null   bool  \n",
-      " 16  region             9536 non-null   object\n",
-      " 17  rank               9536 non-null   int64 \n",
-      " 18  top_25             9536 non-null   int64 \n",
-      "dtypes: bool(3), int64(6), object(10)\n",
-      "memory usage: 1.3+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
    ]
   },
   {
@@ -1235,6 +1171,278 @@
     "df.reset_index(inplace=True)\n",
     "df.drop(columns='index', inplace=True)\n",
     "df.to_pickle('prepared.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65ce78a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sinao/codeup-data-science/top_200/prepare.py:254: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  df.tags = df.tags.str.replace('|',\" \")\n"
+     ]
+    }
+   ],
+   "source": [
+    "testy = prepare.final_prep()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cd746e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pesty = pd.read_pickle('prepared.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ce05c62f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9536 entries, 0 to 9535\n",
+      "Data columns (total 32 columns):\n",
+      " #   Column                   Non-Null Count  Dtype              \n",
+      "---  ------                   --------------  -----              \n",
+      " 0   video_id                 9536 non-null   object             \n",
+      " 1   title                    9536 non-null   object             \n",
+      " 2   publishedAt              9536 non-null   datetime64[ns, UTC]\n",
+      " 3   channelTitle             9536 non-null   object             \n",
+      " 4   categoryId               9536 non-null   object             \n",
+      " 5   trending_date            9536 non-null   datetime64[ns, UTC]\n",
+      " 6   tags                     9536 non-null   object             \n",
+      " 7   view_count               9536 non-null   int64              \n",
+      " 8   likes                    9536 non-null   int64              \n",
+      " 9   comment_count            9536 non-null   int64              \n",
+      " 10  thumbnail_link           9536 non-null   object             \n",
+      " 11  comments_disabled        9536 non-null   bool               \n",
+      " 12  ratings_disabled         9536 non-null   bool               \n",
+      " 13  description              9536 non-null   object             \n",
+      " 14  duration                 9536 non-null   int64              \n",
+      " 15  captions                 9536 non-null   bool               \n",
+      " 16  region                   9536 non-null   object             \n",
+      " 17  rank                     9536 non-null   int64              \n",
+      " 18  top_25                   9536 non-null   int64              \n",
+      " 19  age                      9536 non-null   float64            \n",
+      " 20  engagement               9536 non-null   float64            \n",
+      " 21  sponsored                9536 non-null   int64              \n",
+      " 22  num_of_tags              9536 non-null   int64              \n",
+      " 23  word_bank                9536 non-null   object             \n",
+      " 24  cleaned_tags             9536 non-null   object             \n",
+      " 25  cleaned_desc             9536 non-null   object             \n",
+      " 26  title_in_description     9536 non-null   int64              \n",
+      " 27  title_in_tags            9536 non-null   int64              \n",
+      " 28  pct_tags_in_description  9536 non-null   float64            \n",
+      " 29  title_lengths            9536 non-null   int64              \n",
+      " 30  desc_lengths             9536 non-null   int64              \n",
+      " 31  tags_length              9536 non-null   int64              \n",
+      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(13), object(11)\n",
+      "memory usage: 2.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pesty.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cbc0c721",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9536 entries, 0 to 9535\n",
+      "Data columns (total 32 columns):\n",
+      " #   Column                   Non-Null Count  Dtype              \n",
+      "---  ------                   --------------  -----              \n",
+      " 0   video_id                 9536 non-null   object             \n",
+      " 1   title                    9536 non-null   object             \n",
+      " 2   publishedAt              9536 non-null   datetime64[ns, UTC]\n",
+      " 3   channelTitle             9536 non-null   object             \n",
+      " 4   categoryId               9536 non-null   object             \n",
+      " 5   trending_date            9536 non-null   datetime64[ns, UTC]\n",
+      " 6   tags                     9536 non-null   object             \n",
+      " 7   view_count               9536 non-null   int64              \n",
+      " 8   likes                    9536 non-null   int64              \n",
+      " 9   comment_count            9536 non-null   int64              \n",
+      " 10  thumbnail_link           9536 non-null   object             \n",
+      " 11  comments_disabled        9536 non-null   bool               \n",
+      " 12  ratings_disabled         9536 non-null   bool               \n",
+      " 13  description              9536 non-null   object             \n",
+      " 14  duration                 9536 non-null   int64              \n",
+      " 15  captions                 9536 non-null   bool               \n",
+      " 16  region                   9536 non-null   object             \n",
+      " 17  rank                     9536 non-null   int64              \n",
+      " 18  top_25                   9536 non-null   int64              \n",
+      " 19  age                      9536 non-null   float64            \n",
+      " 20  engagement               9536 non-null   float64            \n",
+      " 21  sponsored                9536 non-null   int64              \n",
+      " 22  num_of_tags              9536 non-null   int64              \n",
+      " 23  word_bank                9536 non-null   object             \n",
+      " 24  cleaned_tags             9536 non-null   object             \n",
+      " 25  cleaned_desc             9536 non-null   object             \n",
+      " 26  title_in_description     9536 non-null   int64              \n",
+      " 27  title_in_tags            9536 non-null   int64              \n",
+      " 28  pct_tags_in_description  9536 non-null   float64            \n",
+      " 29  title_lengths            9536 non-null   int64              \n",
+      " 30  desc_lengths             9536 non-null   int64              \n",
+      " 31  tags_length              9536 non-null   int64              \n",
+      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(13), object(11)\n",
+      "memory usage: 2.1+ MB\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'to_datafram'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sinao/codeup-data-science/top_200/prepare.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sinao/codeup-data-science/top_200/prepare.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pesty\u001b[39m.\u001b[39;49minfo()\u001b[39m.\u001b[39;49mto_datafram()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'to_datafram'"
+     ]
+    }
+   ],
+   "source": [
+    "pesty.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "22da719b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9536 entries, 0 to 9535\n",
+      "Data columns (total 32 columns):\n",
+      " #   Column                   Non-Null Count  Dtype              \n",
+      "---  ------                   --------------  -----              \n",
+      " 0   video_id                 9536 non-null   object             \n",
+      " 1   title                    9536 non-null   object             \n",
+      " 2   publishedAt              9536 non-null   datetime64[ns, UTC]\n",
+      " 3   channelTitle             9536 non-null   object             \n",
+      " 4   categoryId               9536 non-null   object             \n",
+      " 5   trending_date            9536 non-null   datetime64[ns, UTC]\n",
+      " 6   tags                     9536 non-null   object             \n",
+      " 7   view_count               9536 non-null   int64              \n",
+      " 8   likes                    9536 non-null   int64              \n",
+      " 9   comment_count            9536 non-null   int64              \n",
+      " 10  thumbnail_link           9536 non-null   object             \n",
+      " 11  comments_disabled        9536 non-null   bool               \n",
+      " 12  ratings_disabled         9536 non-null   bool               \n",
+      " 13  description              9536 non-null   object             \n",
+      " 14  duration                 9536 non-null   int64              \n",
+      " 15  captions                 9536 non-null   bool               \n",
+      " 16  region                   9536 non-null   object             \n",
+      " 17  rank                     9536 non-null   int64              \n",
+      " 18  top_25                   9536 non-null   int64              \n",
+      " 19  age                      9536 non-null   float64            \n",
+      " 20  engagement               9536 non-null   float64            \n",
+      " 21  sponsored                9536 non-null   int64              \n",
+      " 22  num_of_tags              9536 non-null   int64              \n",
+      " 23  word_bank                9536 non-null   object             \n",
+      " 24  cleaned_tags             9536 non-null   object             \n",
+      " 25  cleaned_desc             9536 non-null   object             \n",
+      " 26  title_in_description     9536 non-null   int64              \n",
+      " 27  title_in_tags            9536 non-null   int64              \n",
+      " 28  pct_tags_in_description  9536 non-null   float64            \n",
+      " 29  title_lengths            9536 non-null   int64              \n",
+      " 30  desc_lengths             9536 non-null   int64              \n",
+      " 31  tags_length              9536 non-null   int64              \n",
+      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(13), object(11)\n",
+      "memory usage: 2.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pesty.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8ce0411",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " #   Column                   Non-Null Count  Dtype              \n",
+    "---  ------                   --------------  -----              \n",
+    " 0   video_id                 9536 non-null   object             \n",
+    " 1   title                    9536 non-null   object             \n",
+    " 2   publishedAt              9536 non-null   datetime64\n",
+    " 3   channelTitle             9536 non-null   object             \n",
+    " 4   categoryId               9536 non-null   object             \n",
+    " 5   trending_date            9536 non-null   datetime64\n",
+    " 6   tags                     9536 non-null   object             \n",
+    " 7   view_count               9536 non-null   int64              \n",
+    " 8   likes                    9536 non-null   int64              \n",
+    " 9   comment_count            9536 non-null   int64              \n",
+    " 10  thumbnail_link           9536 non-null   object             \n",
+    " 11  comments_disabled        9536 non-null   bool               \n",
+    " 12  ratings_disabled         9536 non-null   bool               \n",
+    " 13  description              9536 non-null   object             \n",
+    " 14  duration                 9536 non-null   int64              \n",
+    " 15  captions                 9536 non-null   bool               \n",
+    " 16  region                   9536 non-null   object             \n",
+    " 17  rank                     9536 non-null   int64              \n",
+    " 18  top_25                   9536 non-null   int64              \n",
+    " 19  age                      9536 non-null   float64            \n",
+    " 20  engagement               9536 non-null   float64            \n",
+    " 21  sponsored                9536 non-null   int64              \n",
+    " 22  num_of_tags              9536 non-null   int64              \n",
+    " 23  word_bank                9536 non-null   object             \n",
+    " 24  cleaned_tags             9536 non-null   object             \n",
+    " 25  cleaned_desc             9536 non-null   object             \n",
+    " 26  title_in_description     9536 non-null   int64              \n",
+    " 27  title_in_tags            9536 non-null   int64              \n",
+    " 28  pct_tags_in_description  9536 non-null   float64            \n",
+    " 29  title_lengths            9536 non-null   int64              \n",
+    " 30  desc_lengths             9536 non-null   int64              \n",
+    " 31  tags_length              9536 non-null   int64  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "11904052",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'|    | #   | Column                  | Non-Null       | Count    | Dtype      |\\n|---:|:----|:------------------------|:---------------|:---------|:-----------|\\n|  0 | --- | ------                  | -------------- | -----    |            |\\n|  1 | 0   | video_id                | 9536           | non-null | object     |\\n|  2 | 1   | title                   | 9536           | non-null | object     |\\n|  3 | 2   | publishedAt             | 9536           | non-null | datetime64 |\\n|  4 | 3   | channelTitle            | 9536           | non-null | object     |\\n|  5 | 4   | categoryId              | 9536           | non-null | object     |\\n|  6 | 5   | trending_date           | 9536           | non-null | datetime64 |\\n|  7 | 6   | tags                    | 9536           | non-null | object     |\\n|  8 | 7   | view_count              | 9536           | non-null | int64      |\\n|  9 | 8   | likes                   | 9536           | non-null | int64      |\\n| 10 | 9   | comment_count           | 9536           | non-null | int64      |\\n| 11 | 10  | thumbnail_link          | 9536           | non-null | object     |\\n| 12 | 11  | comments_disabled       | 9536           | non-null | bool       |\\n| 13 | 12  | ratings_disabled        | 9536           | non-null | bool       |\\n| 14 | 13  | description             | 9536           | non-null | object     |\\n| 15 | 14  | duration                | 9536           | non-null | int64      |\\n| 16 | 15  | captions                | 9536           | non-null | bool       |\\n| 17 | 16  | region                  | 9536           | non-null | object     |\\n| 18 | 17  | rank                    | 9536           | non-null | int64      |\\n| 19 | 18  | top_25                  | 9536           | non-null | int64      |\\n| 20 | 19  | age                     | 9536           | non-null | float64    |\\n| 21 | 20  | engagement              | 9536           | non-null | float64    |\\n| 22 | 21  | sponsored               | 9536           | non-null | int64      |\\n| 23 | 22  | num_of_tags             | 9536           | non-null | int64      |\\n| 24 | 23  | word_bank               | 9536           | non-null | object     |\\n| 25 | 24  | cleaned_tags            | 9536           | non-null | object     |\\n| 26 | 25  | cleaned_desc            | 9536           | non-null | object     |\\n| 27 | 26  | title_in_description    | 9536           | non-null | int64      |\\n| 28 | 27  | title_in_tags           | 9536           | non-null | int64      |\\n| 29 | 28  | pct_tags_in_description | 9536           | non-null | float64    |\\n| 30 | 29  | title_lengths           | 9536           | non-null | int64      |\\n| 31 | 30  | desc_lengths            | 9536           | non-null | int64      |\\n| 32 | 31  | tags_length             | 9536           | non-null | int64      |'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_clipboard().to_markdown()"
    ]
   }
  ],
