amended README, final_report

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -864,19 +864,22 @@
    "source": [
     "# Conclusion\n",
     "## Summary of Key Findings\n",
-    "* \n",
-    "* \n",
-    "* \n",
-    "* \n",
+    "* Entertaiment videos are by far the most popular\n",
+    "* Non-Profit videos receive the most engagement\n",
+    "* Global trends stay fairly consistent, but their is some variance\n",
+    "* Release timing is an important factor when wanting to make the jump to becoming a Top 25 video\n",
     "---\n",
     "## Suggestions and Next Steps\n",
-    "* \n",
-    "* \n",
-    "* \n",
-    "* \n",
-    "* \n",
+    "* Recommendations: Focus content on a mix of Non-Profit and Entertainment content released early in the day to capture widest audience\n",
+    "* Future Talk: With more time we would incorporate more data featuring channel analytics because who is posting is just as important as what is being posted\n",
+    "* Next Steps: Work to capture more channel information. Provide deeper insights in regards to content release schedule and global appeal\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
