amended README, final_report

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -171,7 +171,7 @@
     "\n",
     "- `Ha-`non disabled comments get more views then disable comments\n",
     "\n",
-    "`Hypotheses2:`Does comment value and views have a corralantioin together??\n",
+    "`Hypotheses2:`Does comment value and views have a corralantioin together?\n",
     "\n",
     "- `H0-`Comments and view have a high corralations\n",
     "\n",
@@ -795,11 +795,12 @@
    "metadata": {},
    "source": [
     "# Modeling\n",
-    "- \n",
-    "-\n",
-    "-\n",
-    "-\n",
-    "-\n",
+    "- All models had roughly almost the same accuracy for train and validate sets.\n",
+    "- Logistic Regression model performed the worst on out-of-sample data.\n",
+    "- The best performing model is Decision Tree Classifier.\n",
+    "- However, from the above model analysis we can see that the highest accuracy is achieved by Decision Tree. It performs better than baseline by about 7%.\n",
+    "\n",
+    "- While this is an improvement there is still room for improvement in future iterations\n",
     "--- \n"
    ]
   },
