amended: final report and model.py

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -55,13 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from final_exploration import *\n",
+    "from explore import *\n",
     "from importlib import reload\n",
+    "import model\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "4ded9fb8",
    "metadata": {},
    "outputs": [],
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "33fa4267",
    "metadata": {},
    "outputs": [],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,12 +810,8 @@
    "metadata": {},
    "source": [
     "## Features for Modeling\n",
-    "-\n",
-    "-\n",
-    "-\n",
-    "-\n",
-    "-\n",
-    " "
+    "    - 'age_scaled', 'num_of_tags_scaled','duration_scaled', 'num_of_tags_scaled','engagement_scaled', 'sponsored_scaled', 'title_in_description', 'title_in_tags', 'pct_tags_in_description', 'title_lengths', 'desc_lengths','tags_length'\n",
+    "- features selected were primary means of differientation among top 25 type videos and those without the designation\n"
    ]
   },
   {
@@ -829,18 +826,16 @@
    "metadata": {},
    "source": [
     "\n",
-    "* Exposed Top 5 models from train section to the Validation subset of data\n",
-    "* Models had to perform \n",
-    "* \n",
+    "* Exposed top models from train section to the Validation subset of data\n",
     "* Model performace on Validate subset:\n",
     "\n",
-    "Model\t| Accuracy(Score)   |Type                       |Features Used                           |Parameters             |\n",
-    "|---    | ---               |---                        |   -----                                |---                    |\n",
-    "|RF_6   |\t0.91950         |Random Forest              |word_count, lemmatized, language_bigrams|Depth: 7, Leaves: 3\n",
-    "|RF_0   |\t0.91950         |Random Forest              |word_count, lemmatized, language_bigrams|Depth: 5, Leaves: 3\n",
-    "|DTC_1  |   0.91950         |Decision Tree Classifier   |word_count, lemmatized, language_bigrams|Depth: 6\n",
-    "|DTC_0  |\t0.89066\t        |Decision Tree Classifier\t|word_count, lemmatized, language_bigrams|Depth: 5\n",
-    "|KNN_4  |\t0.56322\t        |K-Nearest Neighbors\t    |word_count, lemmatized, language_bigrams|K-Neighbors: 4"
+    "Model\t| Accuracy(Score)   |Type                       |Parameters             |\n",
+    "|---    | ---               |---                        |---                    |\n",
+    "|DTC 13 |\t0.94651         |Decision Tree Classifier   |Depth: 14\n",
+    "|DTC 12 |\t0.94284         |Decision Tree Classifier   |Depth: 13\n",
+    "|RF 0   |   0.94442         |Random Forest              |Min Leaf Sample: 1\n",
+    "|DTC 11 |\t0.94076         |Decision Tree Classifier   |Depth: 12\n",
+    "|DTC 10 |\t0.94022         |Decision Tree Classifier   |Depth: 11"
    ]
   },
   {
@@ -849,14 +844,55 @@
    "source": [
     "---\n",
     "## Test\n",
-    "* Top Model Performance on Test set:  \n",
+    "* Top Model Performance on Test set  \n",
     "\n",
-    "|    | Model    |   Accuracy(Score) | Type                     | Features Used                                    | Parameters   |\n",
-    "|---:|:---------|------------------:|:-------------------------|:-------------------------------------------------|:-------------|\n",
-    "|  0 | Baseline |          0.402299 | Basic Baseline           | Baseline Prediction                              | n/a          |\n",
-    "|  1 | DTC_0    |          0.7778   | Decision Tree Classifier | ['word_count', 'lemmatized', 'language_bigrams'] | Depth: 5     |\n",
+    "|    | Model    |   Accuracy(Score) | Type                     | Parameters   |\n",
+    "|---:|:---------|------------------:|:-------------------------|:-------------|\n",
+    "|  0 | Baseline |          0.87     | Basic Baseline           | n/a          |\n",
+    "|  1 | DTC 14   |          0.938    | Decision Tree Classifier | Depth: 14    |\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_to_scale = ['age','num_of_tags','duration','num_of_tags','engagement','sponsored', 'title_in_description', \n",
+    "        'title_in_tags','pct_tags_in_description', 'title_lengths', 'desc_lengths','tags_length']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.938"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_scaled, validate_scaled, test_scaled = model.scale_data(train, validate, test, features_to_scale)\n",
+    "X_train, y_train, X_validate, y_validate, X_test, y_test = model.getting_(train_scaled,validate_scaled,test_scaled)\n",
+    "model.run__on_test(X_train, y_train, X_test, y_test)"
    ]
   },
   {
@@ -876,11 +912,6 @@
     "* Next Steps: Work to capture more channel information. Provide deeper insights in regards to content release schedule and global appeal\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
