amended explore.py, explore.ipynb, final_report

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -552,7 +552,7 @@
     }
    ],
    "source": [
-    "sport_biograms(train)"
+    "sport_bigrams(train)"
    ]
   },
   {
@@ -573,7 +573,7 @@
     }
    ],
    "source": [
-    "entertainment_biograms(train)"
+    "entertainment_bigrams(train)"
    ]
   },
   {
@@ -594,7 +594,7 @@
     }
    ],
    "source": [
-    "gaming_biograms(train)"
+    "gaming_bigrams(train)"
    ]
   },
   {
@@ -615,7 +615,7 @@
     }
    ],
    "source": [
-    "Music_biograms(train)"
+    "Music_bigrams(train)"
    ]
   },
   {
